[package]
name = "near-relayer-utils"
description = "Rust utilities used by the NodeJS relayer for the NEAR EVM"
version = "0.0.1"
license = "Apache-2.0"
repository = ""
authors = ["Mike Purvis <mike@near.org>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.68"
parity-bytes = "0.1.2"
libsecp256k1 = "0.3.5"
ethereum-types = "0.9.2" # "0.6.0"
keccak-hash = "0.5.1"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
